HtmlUi: More icon is too small for status, fixed padding issue

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/FormField.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/FormField.css
@@ -69,7 +69,6 @@
     cursor: pointer;
 
     &::before {
-      padding-left: 6px;
       content: @icon-ellipsis-v;
       color: @icon-light-color;
     }
